--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "babel-plugin-inline-import": "^3.0.0",
     "expo": "~50.0.11",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
