--- a/package.json
+++ b/package.json
@@ -28,13 +28,18 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-code-highlighter": "^1.2.2",
+    "react-native-marked": "^6.0.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-svg": "^15.1.0",
+    "react-native-web": "~0.19.6",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.3",
     "react-test-renderer": "18.2.0",
