--- a/app.json
+++ b/app.json
@@ -34,6 +34,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "fc808edb-dd8f-4b3a-941c-fcd48d5a60ff"
+      }
+    },
+    "owner": "soorya-u"
   }
 }
