--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.2",
     "babel-plugin-inline-import": "^3.0.0",
     "expo": "~50.0.11",
+    "expo-crypto": "~12.8.1",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
