--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
-    "name": "code-compass",
+    "name": "Code Compass",
     "slug": "code-compass",
+    "description": "Code Compass is your comprehensive companion for all things programming, offering a rich repository of references and cheat sheets for various programming languages, tech stacks, and frameworks. Whether you're a seasoned developer seeking quick refreshers or a novice looking to dive into the world of coding, DevGuide provides the essential resources you need at your fingertips.",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icons/icon.png",
@@ -10,18 +11,16 @@
     "splash": {
       "image": "./assets/icons/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#b3b3b3"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/icons/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#b3b3b3"
       }
     },
     "web": {
@@ -29,9 +28,7 @@
       "output": "static",
       "favicon": "./assets/icons/favicon.png"
     },
-    "plugins": [
-      "expo-router"
-    ],
+    "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true
     },
