chore: Fixed Minor Issues
Signed-off-by: Soorya U <sooryau7@gmail.com>

--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "splash": {
       "image": "./assets/icons/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#b3b3b3"
+      "backgroundColor": "#555555"
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
@@ -20,7 +20,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/icons/adaptive-icon.png",
-        "backgroundColor": "#b3b3b3"
+        "backgroundColor": "#555555"
       }
     },
     "web": {
