--- a/app.json
+++ b/app.json
@@ -13,22 +13,28 @@
       "resizeMode": "contain",
       "backgroundColor": "#555555"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "dev.soorya-u.code-compass"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/icons/adaptive-icon.png",
         "backgroundColor": "#555555"
-      }
+      },
+      "package": "dev.soorya_u.code_compass"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/icons/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true
     },
