chore: Added iOS Simulation and Android APK Build
Signed-off-by: Soorya U <sooryau7@gmail.com>

--- a/eas.json
+++ b/eas.json
@@ -17,6 +17,16 @@
       "ios": {
         "image": "latest"
       }
+    },
+    "simulator": {
+      "ios": {
+        "simulator": true
+      }
+    },
+    "androidapk": {
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
