chore: Added New Build Type for Expo
Signed-off-by: Soorya U <sooryau7@gmail.com>

--- a/eas.json
+++ b/eas.json
@@ -18,14 +18,15 @@
         "image": "latest"
       }
     },
-    "simulator": {
+    "simulator-build": {
       "ios": {
         "simulator": true
       }
     },
-    "androidapk": {
+    "apk-build": {
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "image": "latest"
       }
     }
   },
