--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
     "babel-plugin-inline-import": "^3.0.0",
-    "expo": "~50.0.11",
+    "expo": "^50.0.14",
     "expo-clipboard": "~5.0.1",
     "expo-crypto": "~12.8.1",
     "expo-font": "~11.10.3",
@@ -29,12 +29,12 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
     "react-native-code-highlighter": "^1.2.2",
     "react-native-marked": "^6.0.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
     "react-syntax-highlighter": "^15.5.0"
   },
