--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "expo-router/entry",
   "scripts": {
     "android": "expo start --android",
-    "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
+    "format": "prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
     "ios": "expo start --ios",
     "start": "expo start",
     "web": "expo start --web"
