--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.7",
     "@supabase/supabase-js": "^2.38.4",
     "babel-plugin-inline-import": "^3.0.0",
