--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "@react-navigation/native": "^6.1.7",
     "@supabase/supabase-js": "^2.38.4",
     "babel-plugin-inline-import": "^3.0.0",
-    "expo": "~50.0.7",
+    "expo": "^50.0.17",
     "expo-clipboard": "^5.0.1",
-    "expo-constants": "~15.4.5",
+    "expo-constants": "^15.4.6",
     "expo-crypto": "^12.8.1",
     "expo-linking": "~6.2.2",
-    "expo-router": "^3.4.7",
+    "expo-router": "3.4.10",
     "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
+    "expo-system-ui": "^2.9.4",
     "expo-web-browser": "~12.8.2",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
