--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-marked": "^6.0.4",
     "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
