--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
       "output": "static",
       "favicon": "./src/assets/icons/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": ["expo-router", "expo-secure-store"],
     "experiments": {
       "typedRoutes": true,
       "tsconfigPaths": true
