--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.7",
-    "@supabase/supabase-js": "^2.38.4",
+    "@supabase/supabase-js": "^2.43.0",
     "babel-plugin-inline-import": "^3.0.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "^50.0.17",
     "expo-clipboard": "^5.0.1",
     "expo-constants": "^15.4.6",
     "expo-crypto": "^12.8.1",
+    "expo-document-picker": "~11.10.1",
+    "expo-file-system": "~16.0.9",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
     "expo-router": "3.4.10",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "^2.9.4",
     "expo-web-browser": "~12.8.2",
@@ -30,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-marked": "^6.0.4",
     "react-native-reanimated": "~3.6.2",
     "react-native-reanimated-carousel": "^3.5.1",
