--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "code-compass",
     "description": "Code Compass is your comprehensive companion for all things programming, offering a rich repository of references and cheat sheets for various programming languages, tech stacks, and frameworks. Whether you're a seasoned developer seeking quick refreshers or a novice looking to dive into the world of coding, DevGuide provides the essential resources you need at your fingertips.",
     "version": "1.0.0",
-    "scheme": "code-compass",
+    "scheme": "dev.soorya-u",
     "orientation": "portrait",
     "icon": "./src/assets/icons/icon.png",
     "userInterfaceStyle": "automatic",
