--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-inline-import": "^3.0.0",
     "base64-arraybuffer": "^1.0.2",
     "expo": "^50.0.17",
+    "expo-auth-session": "~5.4.0",
     "expo-clipboard": "^5.0.1",
     "expo-constants": "^15.4.6",
     "expo-crypto": "^12.8.1",
