--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.7",
     "@supabase/supabase-js": "^2.43.0",
+    "aes-js": "^3.1.2",
     "babel-plugin-inline-import": "^3.0.0",
     "base64-arraybuffer": "^1.0.2",
     "expo": "^50.0.17",
@@ -36,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-marked": "^6.0.4",
     "react-native-reanimated": "~3.6.2",
@@ -48,6 +50,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/aes-js": "^3.1.4",
     "@types/react": "~18.2.14",
     "@types/react-syntax-highlighter": "^15.5.11",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
