--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.7",
     "@supabase/supabase-js": "^2.43.0",
     "aes-js": "^3.1.2",
@@ -40,10 +41,12 @@
     "react-native-get-random-values": "~1.8.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-marked": "^6.0.4",
+    "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "react-syntax-highlighter": "^15.5.0"
