--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@hookform/resolvers": "^3.4.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/material-top-tabs": "^6.6.13",
@@ -19,16 +20,16 @@
     "aes-js": "^3.1.2",
     "babel-plugin-inline-import": "^3.0.0",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "^51.0.1",
+    "expo": "~51.0.8",
     "expo-auth-session": "~5.5.2",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.1",
     "expo-crypto": "~13.0.2",
     "expo-document-picker": "~12.0.1",
     "expo-file-system": "~17.0.1",
-    "expo-image-picker": "~15.0.4",
+    "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.11",
+    "expo-router": "~3.5.14",
     "expo-secure-store": "~13.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
@@ -36,20 +37,22 @@
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.4",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "~1.11.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-marked": "^6.0.4",
     "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "3.10.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
