--- a/package.json
+++ b/package.json
@@ -3,70 +3,70 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "android": "expo start --android",
+    "android": "expo run:android",
     "format": "prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
-    "ios": "expo start --ios",
+    "ios": "expo run:ios",
     "start": "expo start",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
-    "@hookform/resolvers": "^3.4.0",
+    "@expo/vector-icons": "^14.0.2",
+    "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/drawer": "^6.6.15",
-    "@react-navigation/material-top-tabs": "^6.6.13",
-    "@react-navigation/native": "^6.1.7",
-    "@supabase/supabase-js": "^2.43.0",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/material-top-tabs": "^6.6.14",
+    "@react-navigation/native": "^6.1.18",
+    "@supabase/supabase-js": "^2.45.2",
     "aes-js": "^3.1.2",
     "babel-plugin-inline-import": "^3.0.0",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "~51.0.8",
+    "expo": "~51.0.31",
     "expo-auth-session": "~5.5.2",
     "expo-clipboard": "~6.0.3",
-    "expo-constants": "~16.0.1",
+    "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
-    "expo-document-picker": "~12.0.1",
+    "expo-document-picker": "~12.0.2",
     "expo-file-system": "~17.0.1",
-    "expo-image-picker": "~15.0.5",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
-    "expo-secure-store": "~13.0.1",
+    "expo-router": "~3.5.23",
+    "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
+    "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "nativewind": "^4.0.1",
+    "nativewind": "^4.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.4",
-    "react-native": "0.74.3",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-hook-form": "^7.53.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.2",
     "react-native-get-random-values": "~1.11.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-marked": "^6.0.4",
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "~0.19.12",
     "react-syntax-highlighter": "^15.5.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
     "@types/aes-js": "^3.1.4",
-    "@types/react": "~18.2.14",
-    "@types/react-syntax-highlighter": "^15.5.11",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "ajv": "^8.12.0",
-    "eslint": "^8.50.0",
-    "eslint-config-universe": "^12.0.0",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.3",
+    "@types/react": "~18.2.79",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "ajv": "^8.17.1",
+    "eslint": "^8.57.0",
+    "eslint-config-universe": "^12.1.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "^3.4.10",
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
