--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "format": "prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
     "ios": "expo run:ios",
     "start": "expo start",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "expo prebuild"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.3",
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
-    "@supabase/supabase-js": "^2.45.2",
+    "@supabase/supabase-js": "^2.45.4",
     "aes-js": "^3.1.2",
     "babel-plugin-inline-import": "^3.0.0",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "~51.0.31",
+    "expo": "^51.0.32",
     "expo-auth-session": "~5.5.2",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
@@ -29,12 +30,13 @@
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-modules-core": "1.12.24",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "nativewind": "^4.1.1",
+    "nativewind": "^4.1.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
@@ -46,7 +48,7 @@
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "^4.10.9",
+    "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
@@ -62,20 +64,17 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "ajv": "^8.17.1",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-universe": "^12.1.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^3.4.12",
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
     "extends": "universe/native"
   },
   "resolutions": {
-    "expo-modules-core": "~1.11.0"
-  },
-  "overrides": {
     "expo-modules-core": "~1.11.0"
   },
   "expo": {
