chore: Minor Fixes
Signed-off-by: Soorya U <sooryau7@gmail.com>

--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "dev.soorya-u.code-compass"
+      "bundleIdentifier": "dev.soorya_u.code_compass"
     },
     "android": {
       "adaptiveIcon": {
