--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "aes-js": "^3.1.2",
     "babel-plugin-inline-import": "^3.0.0",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "^51.0.32",
+    "expo": "~51.0.39",
     "expo-auth-session": "~5.5.2",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
@@ -30,8 +30,8 @@
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
-    "expo-modules-core": "1.12.24",
-    "expo-router": "~3.5.23",
+    "expo-modules-core": "~1.12.26",
+    "expo-router": "~3.5.24",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
