feat: Migrated Project to Expo v52 with new RN Architecture
Signed-off-by: Soorya U <sooryau7@gmail.com>

--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "Code Compass",
     "slug": "code-compass",
     "description": "Code Compass is your comprehensive companion for all things programming, offering a rich repository of references and cheat sheets for various programming languages, tech stacks, and frameworks. Whether you're a seasoned developer seeking quick refreshers or a novice looking to dive into the world of coding, DevGuide provides the essential resources you need at your fingertips.",
+    "newArchEnabled": true,
     "version": "1.0.0",
     "scheme": "dev.soorya-u",
     "orientation": "portrait",
