--- a/package.json
+++ b/package.json
@@ -11,64 +11,65 @@
     "build": "expo prebuild"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.3",
-    "@hookform/resolvers": "^3.9.0",
+    "@expo/vector-icons": "^14.0.4",
+    "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/drawer": "^6.7.2",
-    "@react-navigation/material-top-tabs": "^6.6.14",
-    "@react-navigation/native": "^6.1.18",
-    "@supabase/supabase-js": "^2.45.4",
+    "@react-navigation/drawer": "^7.1.1",
+    "@react-navigation/material-top-tabs": "^7.1.0",
+    "@react-navigation/native": "^7.0.14",
+    "@supabase/supabase-js": "^2.47.10",
     "aes-js": "^3.1.2",
     "babel-plugin-inline-import": "^3.0.0",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "~51.0.39",
-    "expo-auth-session": "~5.5.2",
-    "expo-clipboard": "~6.0.3",
-    "expo-constants": "~16.0.2",
-    "expo-crypto": "~13.0.2",
-    "expo-document-picker": "~12.0.2",
-    "expo-file-system": "~17.0.1",
-    "expo-image-picker": "~15.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-modules-core": "~1.12.26",
-    "expo-router": "~3.5.24",
-    "expo-secure-store": "~13.0.2",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "nativewind": "^4.1.10",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.53.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.2",
+    "expo": "~52.0.23",
+    "expo-auth-session": "~6.0.1",
+    "expo-clipboard": "~7.0.0",
+    "expo-constants": "~17.0.3",
+    "expo-crypto": "~14.0.1",
+    "expo-document-picker": "~13.0.1",
+    "expo-file-system": "~18.0.6",
+    "expo-image-picker": "~16.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-modules-core": "~2.1.2",
+    "expo-router": "~4.0.15",
+    "expo-secure-store": "~14.0.0",
+    "expo-splash-screen": "~0.29.18",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.6",
+    "expo-web-browser": "~14.0.1",
+    "nativewind": "^4.1.23",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-native": "0.76.5",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-marked": "^6.0.4",
-    "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "3.31.1",
+    "react-native-marked": "^6.0.5",
+    "react-native-pager-view": "6.5.1",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-reanimated-carousel": "^4.0.0-canary.22",
+    "react-native-safe-area-context": "^4.14.1",
+    "react-native-screens": "4.4.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.12",
-    "react-syntax-highlighter": "^15.5.0",
-    "zod": "^3.23.8"
+    "react-native-web": "~0.19.13",
+    "react-syntax-highlighter": "^15.6.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.26.0",
     "@types/aes-js": "^3.1.4",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.18",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "ajv": "^8.17.1",
     "eslint": "^8.57.1",
     "eslint-config-universe": "^12.1.0",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.4.12",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
