--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-syntax-highlighter": "^15.6.1",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
