fix: added a theme context to project
Signed-off-by: Soorya U <sooryau7@gmail.com>

--- a/app.json
+++ b/app.json
@@ -2,10 +2,12 @@
   "expo": {
     "name": "Code Compass",
     "slug": "code-compass",
+    "owner": "soorya-u",
+    "githubUrl": "https://github.com/soorya-u/Code-Compass",
     "description": "Code Compass is your comprehensive companion for all things programming, offering a rich repository of references and cheat sheets for various programming languages, tech stacks, and frameworks. Whether you're a seasoned developer seeking quick refreshers or a novice looking to dive into the world of coding, DevGuide provides the essential resources you need at your fingertips.",
     "newArchEnabled": true,
     "version": "1.0.0",
-    "scheme": "dev.soorya-u",
+    "scheme": "dev.soorya_u.code_compass",
     "orientation": "portrait",
     "icon": "./src/assets/icons/logo.png",
     "userInterfaceStyle": "automatic",
@@ -27,6 +29,7 @@
       "package": "dev.soorya_u.code_compass"
     },
     "web": {
+      "lang": "en",
       "bundler": "metro",
       "output": "static",
       "favicon": "./src/assets/icons/logo.png"
@@ -43,7 +46,6 @@
       "eas": {
         "projectId": "fc808edb-dd8f-4b3a-941c-fcd48d5a60ff"
       }
-    },
-    "owner": "soorya-u"
+    }
   }
 }
