--- a/package.json
+++ b/package.json
@@ -21,27 +21,26 @@
     "aes-js": "^3.1.2",
     "babel-plugin-inline-import": "^3.0.0",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "~52.0.23",
-    "expo-auth-session": "~6.0.1",
-    "expo-clipboard": "~7.0.0",
+    "expo": "~52.0.29",
+    "expo-auth-session": "~6.0.3",
+    "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.3",
-    "expo-crypto": "~14.0.1",
-    "expo-document-picker": "~13.0.1",
+    "expo-document-picker": "~13.0.2",
     "expo-file-system": "~18.0.6",
-    "expo-image-picker": "~16.0.3",
-    "expo-linking": "~7.0.3",
-    "expo-modules-core": "~2.1.2",
-    "expo-router": "~4.0.15",
-    "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo-image-picker": "~16.0.5",
+    "expo-linking": "~7.0.5",
+    "expo-modules-core": "~2.2.0",
+    "expo-router": "~4.0.17",
+    "expo-secure-store": "~14.0.1",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "~14.0.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-native": "0.76.5",
+    "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
@@ -54,9 +53,9 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5",
     "react-syntax-highlighter": "^15.6.1",
-    "zod": "^3.24.1",
-    "react-native-webview": "13.12.5"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
